k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: highload
  labels:
    app: highload-service
    environment: production
